<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginViewModel"
            type="com.udacity.shoestore.screens.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/emailText"
            style="@style/login_edit_text_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@id/passwordText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/passwordLabel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="john.smith@gmail.com" />

        <TextView
            android:id="@+id/emailLabel"
            style="@style/login_labels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/emailText"
            app:layout_constraintEnd_toStartOf="@id/emailText"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/passwordLabel"
            style="@style/login_labels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/passwordText"
            app:layout_constraintEnd_toStartOf="@id/passwordText"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/passwordText"
            style="@style/login_edit_text_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/passwordLabel"
            app:layout_constraintTop_toBottomOf="@id/emailText"
            app:layout_constraintBottom_toTopOf="@id/loginButton"
            tools:text="password" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            app:layout_constraintTop_toBottomOf="@id/passwordLabel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>